# llm_bidwriting

./: .gitignore  AGENTS.md  README.md
backend/: .env.example  README.md  app.py  config.py  models.py  pyproject.toml
backend/instance/: bid_system.db
backend/routes/: export.py  files.py  generation.py  knowledge.py  outline.py  projects.py  review.py
backend/uploads/exports/: bid_1_20260331165915.docx  bid_1_20260401114011.docx  bid_2_20260330145335.docx  bid_4_20260406162833.docx  bid_4_20260406170733.docx
backend/utils/: ThinkStreamFilter.py  dify_client.py  file_utils.py  knowledge_client.py  response.py
docs/dify_constronstor/: 废标检查工作流.yml  招标文件解析工作流.yml  章节生成工作流.yml
docs/spec/: 01-product-overview.md  02-prd.md  03-functional-spec.md  04-architecture.md  05-api-data-model.md  06-Dify通用投标文件生成工作流.md  07-word-export-spec.md  08-test-and-milestones.md  09-dify-workflow-split-design.md  10-dify-node-config-prompts-backend-mapping.md  README.md  dify工作流以及提示词.md
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.vue  main.ts
frontend/src/api/: index.ts
frontend/src/assets/: base.css  main.css
frontend/src/components/: TreeNode.vue
frontend/src/components/workspace/: ExportPanel.vue  GenerationPanel.vue  KnowledgePanel.vue  OutlinePanel.vue  ReviewPanel.vue  TenderFilePanel.vue
frontend/src/router/: index.ts
frontend/src/views/: ProjectList.vue  WorkspacePage.vue
